[package]
name = "rocket-oauth2"
version = "0.0.1"
authors = ["Ashton Kemerling <ashtonkemerling@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/AshtonKem/rocket-oauth2"
documentation = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
