[package]
name = "example"
version = "0.1.0"
authors = ["Ashton Kemerling <ashtonkemerling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket-oauth2 = { path = "../" }
rocket = "0.4.2"
dotenv = "0.15.0"
